--- a/index.html
+++ b/index.html
@@ -42,13 +42,18 @@
       <h2>ساختمان داده</h2>
       <p class="time">1 تا 3.15 </p>
       <hr>
-      <h2> فارسی </h2>
-      <p class="time">4.15 تا 6 </p>
-      <hr>
       <h2>الگوريتم فلوچارت</h2>
       <p class="time">6 تا 7.30 </p>
       </div>
     </div>
+     <div class="carousel-item">
+      <h1 class="roz">سه شنبه</h1>
+      <div class="darsa">
+      <h2> فارسی </h2>
+      <p class="time">4.15 تا 6 </p>
+      </div>
+    </div>
+     
     <div class="carousel-item">
       <h1 class="roz">چهارشنبه</h1>
       <div class="darsa">
